# Library-App-ERPNEXT

./: README.md  pyproject.toml
.github/workflows/: ci.yml
library_navari/: hooks.py  modules.txt
library_navari/library_app_management_navari_test/doctype/book_transaction/: book_transaction.js  book_transaction.json  book_transaction.py  test_book_transaction.py
library_navari/library_app_management_navari_test/doctype/library_book/: library_book.js  library_book.json  library_book.py  test_library_book.py
library_navari/library_app_management_navari_test/doctype/library_member/: library_member.js  library_member.json  library_member.py  test_library_member.py
library_navari/library_app_management_navari_test/library_app_management_navari_test_dashboard/books_available/: books_available.json
library_navari/library_app_management_navari_test/workspace/books/: books.json
